--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 
 .valentine-text {
   font-size: 2.2rem;
-  color: #ff4d6d;
+  color: white;
   text-shadow: 2px 2px 0 #ff4d6d;
   margin-bottom: 30px;
 }
